--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -15,3 +15,15 @@
     margin-right: 5px;
     margin-left: 50px;
 }
+.pagination{
+    text-align: center;
+    margin: 30px;
+}
+.pagination button{
+    padding: 0 10px;
+    margin-right: 20px;
+}
+.pagination .selected{
+    background-color: rgb(81, 81, 224);
+    color: white;
+}
